<resources>
    <string name="app_name">Unilink</string>

    <!-- Strings related to login and register-->
    <string name="personusernametextviewmaincontainer">Person One User Name</string>
    <string name="personabouttextviewmaincontainer">Year 2 Computer Science</string>
    <string name="notificationmessage">Person One has waved to Person Two</string>
    <string name="connection">20+ Connections</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="login_desc">Enter your email and password</string>
    <string name="register">Register</string>
    <string name="register_desc">Fill up the necessary details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="loginorregisterimage">Login Or Register Image</string>
    <string name="discover">Discover</string>
    <string name="chat">Chat</string>
    <string name="connect">Connect</string>
    <string name="getstarted">Let\'s Get Started</string>
    <string name="next">Next</string>
    <string name="backbutton">Back</string>
    <string name="bottomnavbar">Bottom Navigation Bar</string>
    <string name="collapsemenubutton">Collapse Menu Button</string>
    <string name="homebuttoninactive">Home Button Inactive</string>
    <string name="chatbuttoninactive">Chat Button Inactive</string>
    <string name="notificationbuttoninactive">Notification Button Inactive</string>
    <string name="profilebuttoninactive">Profile Button Inactive</string>
    <string name="bluetoothbuttondefault">Bluetooth Button Default</string>
    <string name="maincontainer">Main Container</string>
    <string name="mainbanner">Main Banner</string>
    <string name="wavesmallbutton">Wave Small Button</string>
    <string name="chatsmallbutton">Chat Small Button</string>
    <string name="homebuttonactive">Home Button Active</string>
    <string name="chatbuttonactive">Chat Button Active</string>
    <string name="notificationbuttonactive">Notification Button Active</string>
    <string name="profilebuttonactive">Profile Button Active</string>
    <string name="defaultprofilepicturesmall">Default Profile Picture Small</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="friendbutton">Friend Button</string>
    <string name="wavesmallbuttonnotif">Wave Small Button Notification </string>
    <string name="connectionsmallbuttonnotif">Connection Small Button Notification</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="threedotsbutton">Three Dots Button</string>
    <string name="profilebannercontainer">Profile Banner Container</string>
    <string name="profilepicture">Profile Picture</string>
    <string name="about">About</string>
    <string name="comments">Comments</string>
    <string name="home">Home</string>
    <string name="termsandpolicies">Terms and Policies</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="opendrawer">Open Drawer</string>
    <string name="closedrawer">Close Drawer</string>
    <string name="fpdots">Dotted indicator of the Features slide</string>
    <string name="sidenav_open">Open</string>
    <string name="sidenav_close">Close</string>
    <string name="editprofilepicture">Edit Profile Picture</string>
    <string name="editprofilebanner">Edit Profile Banner</string>
    <string name="editprofiledetails">Edit Profile Details</string>
    <string name="loading">Loading...</string>
    <string name="firstTime">FirstTime?</string>
    <!-- Beacon Transmission String Values -->
    <string name="beaconlayout">m:2-3=beac,i:4-7,i:8-23,p:24-24,d:25-25</string>
    <string name="beacon_transmission_notif_ChannelId">1</string>
    <string name="beacon_transmission_notif_ChannelTitle">Unilink</string>
    <string name="beacon_transmission_notif_ChannelDesc">Unilink is using your bluetooth to show you off</string>
    <string name="beacon_transmission_notif_id">1</string>
    <string name="beacon_transmission_notif_title">Unilink - Showing your existence</string>
    <string name="beacon_transmission_notif_cancel">Stop visibility</string>
    <string name="addyourphoto">Add Your Photo</string>
    <string name="addyourphotodetails">Choose a photo for your profile picture. You can change this later. </string>
    <string name="proceed">Proceed</string>
    <string name="addyourprofilebanner">Add your Profile Banner</string>
    <string name="addyourprofilebannerdetails">Choose a photo for your profile banner. You can change this later. </string>
    <string name="whensyourbirthday">When\'s your Birthday?</string>
    <string name="whensyourbirthdaydetails">A</string>
    <string name="writeyourbiosection">Write your Bio Section</string>
    <string name="writeyourbiosectiondetails">Tell everything about yourself here</string>
    <string name="label">Insert here</string>
    <string name="chooseyourinterests">Choose your interests</string>
    <string name="chooseyourinterestsdetails">please select the things you are interested in (max. 7)</string>
    <string name="music">Music</string>
    <string name="moviesortvhosws">Movies or TV shows</string>
    <string name="sports">Sports</string>
    <string name="outdooractivities">Outdoor Activities</string>
    <string name="food">Food</string>
    <string name="travel">Travel</string>
    <string name="books">Books</string>
    <string name="art">Art</string>
    <string name="gaming">Gaming</string>
    <string name="pop">🎵 Pop</string>
    <string name="hiphop">🎵 Hip-Hop</string>
    <string name="rock">🎵 Rock</string>
    <string name="jazz">🎵 Jazz</string>
    <string name="classical">🎵 Classical</string>
    <string name="country">🎵 Country</string>
    <string name="action">🎥 Action</string>
    <string name="romance">🎥 Romance</string>
    <string name="comedy">🎥 Comedy</string>
    <string name="horror">🎥 Horror</string>
    <string name="thriller">🎥 Thriller</string>
    <string name="drama">🎥 Drama</string>
    <string name="sciencefiction">🎥 Science Fiction</string>
    <string name="soccer">⚽ Soccer</string>
    <string name="basketball">🏀 Basketball</string>
    <string name="badminton">🏸 Badminton</string>
    <string name="tennis">🎾 Tennis</string>
    <string name="volleyball">🏐 Volleyball</string>
    <string name="swimming">🏊 Swimming</string>
    <string name="running">👟 Running</string>
    <string name="hiking">🥾 Hiking</string>
    <string name="camping">🏕️ Camping</string>
    <string name="surfing">🏄 Surfing</string>
    <string name="skiing">🎿 Skiing</string>
    <string name="snowboarding">🏂 Snowboarding</string>
    <string name="biking">🚴 Biking</string>
    <string name="italian">🍴 Italian</string>
    <string name="chinese">🍴 Chinese</string>
    <string name="mexican">🍴 Mexican</string>
    <string name="japanese">🍴 Japanese</string>
    <string name="vegan">🍴 Vegan</string>
    <string name="fastfood">🍴 Fast Food</string>
    <string name="beach">🏖 Beach</string>
    <string name="mountains">🏔 Mountains</string>
    <string name="city">🏙 City</string>
    <string name="international">✈ International</string>
    <string name="nationalparks">🏞 National Parks</string>
    <string name="fiction">📚 Fiction</string>
    <string name="nonfiction">📚 Non-Fiction</string>
    <string name="mystery">📚 Mystery</string>
    <string name="painting">🎨 Painting</string>
    <string name="drawing">📚 Drawing</string>
    <string name="photography">📸 Photography</string>
    <string name="sculpture">🗿 Sculpture</string>
    <string name="film">🎥 Film</string>
    <string name="console">🎮 Console</string>
    <string name="pc">🎮 PC</string>
    <string name="mobile">🎮 Mobile</string>
    <string name="fps">🎮 FPS</string>
    <string name="strategy">🎮 Strategy</string>
    <string name="interest1">Interest 1</string>
    <string name="interest2">Interest 2</string>
    <string name="interest3">Interest 3</string>
    <string name="connections">Connections</string>
    <string name="persononewouldliketosendafriendrequest">Person 1 would like to send a friend request</string>
    <string name="accept">Accept</string>
    <string name="ignore">Ignore</string>
    <string name="ddmmmyyyy">DD/MM/YYYY</string>
    <string name="letssetupyourprofile">Let\'s Setup your Profile</string>
    <string name="wave_notification_channel">WaveNotificationChannel</string>
    <string name="wave_notification_channel_desc">General Notification Channel for Wave Requests</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>