<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".addProfileInterest">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp"
        android:paddingTop="32dp"
        android:gravity="center_horizontal"
        >

        <TextView
            android:id="@+id/chooseinterests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitobold"
            android:text="@string/chooseyourinterests"
            android:textColor="@color/almost_black"
            android:textSize="32sp"
            android:layout_marginTop="32dp"

            />

        <TextView
            android:id="@+id/chooseinterestsdetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitoregular"
            android:text="@string/chooseyourinterestsdetails"
            android:textSize="12sp"
            android:layout_below="@id/chooseinterests"
            />

    </RelativeLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container1"
        android:orientation="vertical"
        android:paddingVertical="8dp"
        android:paddingStart="32dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music"
            android:fontFamily="@font/nunitosemibold"
            android:textColor="@color/almost_black"
            android:textSize="24sp"
            />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pop"
                android:checkable="false"
                android:layout_marginHorizontal="8dp"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moviesortvhosws"
            android:fontFamily="@font/nunitosemibold"
            android:textColor="@color/almost_black"
            android:textSize="24sp"
            />



    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>