<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:backgroundTint="@color/lighter_grey"
        app:cardCornerRadius="10dp">

        <ImageButton
            android:id="@+id/profilepic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="8dp"
            android:paddingHorizontal="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="4dp"
            android:background="@null"
            android:src="@drawable/defaultprofilepicturesmall"
            android:contentDescription="@string/profile" />

        <TextView
            android:id="@+id/defaultusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/nunitobold"
            android:textColor="@color/abit_grey"
            android:textSize="16sp"
            android:text="@string/personusernametextviewmaincontainer" />

        <TextView
            android:id="@+id/defaultabout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/defaultusername"
            android:layout_marginStart="72dp"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/nunitosemibold"
            android:text="@string/personabouttextviewmaincontainer"
            android:textColor="@color/abit_grey"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/waveorconnectbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp"
            android:paddingHorizontal="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="256dp"
            android:layout_marginEnd="4dp"
            android:background="@null"
            android:src="@drawable/wavesmallbutton"
            android:contentDescription="@string/connect" />
    </androidx.cardview.widget.CardView>

</RelativeLayout>