<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".addBioFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="64dp"
        android:paddingTop="32dp"
        android:paddingBottom="32dp"
        android:gravity="center_horizontal"
        >

        <TextView
            android:id="@+id/biosectiontextview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitobold"
            android:text="@string/writeyourbiosection"
            android:textColor="@color/almost_black"
            android:textSize="32sp"
            android:layout_marginTop="32dp"
            />
        <TextView
            android:id="@+id/textview2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitoregular"
            android:text="@string/writeyourbiosectiondetails"
            android:textSize="12sp"
            android:layout_below="@id/biosectiontextview"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview2"
            android:layout_marginTop="32dp"
            android:hint="@string/label"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </RelativeLayout>


</FrameLayout>